@@ -1815,4 +1815,33 @@ for details or download the
     </content>
   </item>
 
+  <item>
+    <date>2005-09-06 16:10</date>
+    <title>GStreamer 0.9 development series releases</title>
+    <content>
+<p>
+The GStreamer team is petrified to announce new releases of GStreamer
+modules in the 0.9.x development release series.
+5 modules have been released: GStreamer 0.9.2, GStreamer Base Plug-ins 0.9.2,
+GStreamer Good Plug-ins 0.9.1, GStreamer Ugly Plug-ins 0.9.1, and
+GStreamer Bad Plug-ins 0.9.1.
+</p>
+<p>
+Check out release notes for
+<a href="&site;/releases/gstreamer/0.9.2.html">gstreamer</a>,
+<a href="&site;/releases/gst-plugins-base/0.9.2.html">gst-plugins-base</a>,
+<a href="&site;/releases/gst-plugins-good/0.9.1.html">gst-plugins-good</a>,
+<a href="&site;/releases/gst-plugins-ugly/0.9.1.html">gst-plugins-ugly</a>,
+<a href="&site;/releases/gst-plugins-bad/0.9.1.html">gst-plugins-bad</a>,
+or download tarballs for
+<a href="&site;/src/gstreamer/gstreamer-0.9.2.tar.bz2">gstreamer</a>,
+<a href="&site;/src/gst-plugins-base/gst-plugins-base-0.9.2.tar.bz2">gst-plugins-base</a>,
+<a href="&site;/src/gst-plugins-good/gst-plugins-good-0.9.1.tar.bz2">gst-plugins-good</a>,
+<a href="&site;/src/gst-plugins-ugly/gst-plugins-ugly-0.9.1.tar.bz2">gst-plugins-ugly</a>,
+<a href="&site;/src/gst-plugins-bad/gst-plugins-bad-0.9.1.tar.bz2">gst-plugins-bad</a>.
+</p>
+    </content>
+  </item>
+
+
 </news>
